last stable version (no streaming)

--- a/test_ollama_stream.ipynb
+++ b/test_ollama_stream.ipynb
@@ -1,49 +1,545 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Ollama Response"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colombia has a rich and diverse history that spans over 2,000 years. Here's a brief overview:\n",
-      "\n",
-      "**Pre-Columbian Era (2000 BCE - 1537 CE)**: The region was inhabited by indigenous tribes such as the Muisca, Tairona, and Wayúu. These civilizations developed complex societies, with the Muisca being one of the most advanced in South America.\n",
-      "\n",
-      "**Spanish Colonization (1537 - 1810)**: In 1537, Spanish conquistador Gonzalo Jiménez de Quesada arrived in present-day Colombia, marking the beginning of European colonization. The Spanish established cities like Bogotá and Cartagena, and exploited the region's natural resources.\n",
-      "\n",
-      "**Independence (1810 - 1821)**: Colombia declared independence from Spain on July 20, 1810, led by Simón Bolívar, a Venezuelan-born leader who would later become known as \"El Libertador.\" The War of Independence lasted until 1821, when Gran Colombia was formed.\n",
-      "\n",
-      "**Gran Colombia (1821 - 1831)**: Gran Colombia was a short-lived republic that included present-day Colombia, Venezuela, Ecuador, and Panama. Bolívar served as its president until his death in 1830.\n",
-      "\n",
-      "**Republic of New Granada (1831 - 1858)**: After Bolívar's death, the region was divided into three separate countries: Colombia, Venezuela, and Ecuador. The Republic of New Granada was formed, with Bogotá as its capital.\n",
-      "\n",
-      "**United States of Colombia (1858 - 1886)**: In 1858, the Republic of New Granada became the United States of Colombia, a federal republic that included present-day Colombia, Panama, and parts of Venezuela and Ecuador.\n",
-      "\n",
-      "**Panama Separation (1903)**: Panama declared independence from Colombia in 1903, after the construction of the Panama Canal was completed. This led to Colombia's loss of territory and a significant economic blow.\n",
-      "\n",
-      "**La Violencia (1946 - 1958)**: A period of political instability and violence, known as La Violencia, occurred between 1946 and 1958, resulting in the deaths of tens of thousands of people and the displacement of many more.\n",
-      "\n",
-      "**Modern Colombia (1960s - present)**: Since the 1960s, Colombia has undergone significant social, economic, and political changes. The country has faced challenges such as drug trafficking, guerrilla warfare, and urban violence, but has also made progress in areas like education, healthcare, and infrastructure development.\n",
-      "\n",
-      "This is a condensed history of Colombia, and there are many more details and events that have shaped the country's past."
-     ]
+     "data": {
+      "text/plain": [
+       "{'model': 'llama3',\n",
+       " 'created_at': '2024-06-21T18:31:41.144199Z',\n",
+       " 'response': 'Tennis has a rich and fascinating history that spans over 800 years. Here\\'s a brief overview:\\n\\n**Middle Ages (12th-15th centuries):**\\nThe modern game of tennis originated in France in the Middle Ages. The earliest known version, called \"Jeux de Paume,\" was played by monks and nobles in indoor courts made of wood or stone. This early form of tennis involved hitting a ball with a hand or racket into a court divided by a net.\\n\\n**Renaissance (16th-17th centuries):**\\nAs the Renaissance took hold, tennis became a popular pastime among European aristocrats. The game spread throughout Europe, and indoor courts were replaced with outdoor ones made of grass, clay, or stone. The first written rules for tennis were created in France during this period.\\n\\n**18th century:**\\nTennis gained popularity in England during the 1700s, particularly among the upper class. The All England Lawn Tennis and Croquet Club (AELTC) was founded in 1868 at Wimbledon, London, which would later become one of the most prestigious tennis tournaments in the world.\\n\\n** Late 19th century:**\\nThe modern rules of tennis were codified in 1873 by Walter Clopton Wingfield, an English army officer. The first official Wimbledon tournament took place in 1877, with Spencer Gore winning the men\\'s singles title. The International Lawn Tennis Federation (ILTF) was established in 1924 to govern the sport globally.\\n\\n**20th century:**\\nTennis became a global phenomenon in the 20th century, with players like Billie Jean King, Rod Laver, and Martina Navratilova dominating the sport. The Open Era of tennis began in 1968, when professional players were allowed to compete in Grand Slam tournaments.\\n\\n**Modern era (21st century):**\\nTennis continues to evolve, with advances in technology, equipment, and training methods. The sport has become more globalized, with players from diverse backgrounds competing at the highest level. Today, tennis is played by millions of people worldwide, with professional tours like the ATP and WTA circuits attracting massive audiences.\\n\\nThis brief history barely scratches the surface of tennis\\'s rich heritage, but I hope it gives you a sense of the sport\\'s development over the centuries!',\n",
+       " 'done': True,\n",
+       " 'context': [128006,\n",
+       "  882,\n",
+       "  128007,\n",
+       "  198,\n",
+       "  198,\n",
+       "  41551,\n",
+       "  757,\n",
+       "  264,\n",
+       "  10015,\n",
+       "  3925,\n",
+       "  315,\n",
+       "  58251,\n",
+       "  128009,\n",
+       "  128006,\n",
+       "  78191,\n",
+       "  128007,\n",
+       "  198,\n",
+       "  198,\n",
+       "  51,\n",
+       "  16550,\n",
+       "  706,\n",
+       "  264,\n",
+       "  9257,\n",
+       "  323,\n",
+       "  27387,\n",
+       "  3925,\n",
+       "  430,\n",
+       "  45395,\n",
+       "  927,\n",
+       "  220,\n",
+       "  4728,\n",
+       "  1667,\n",
+       "  13,\n",
+       "  5810,\n",
+       "  596,\n",
+       "  264,\n",
+       "  10015,\n",
+       "  24131,\n",
+       "  1473,\n",
+       "  9,\n",
+       "  9,\n",
+       "  45035,\n",
+       "  50093,\n",
+       "  320,\n",
+       "  717,\n",
+       "  339,\n",
+       "  12,\n",
+       "  868,\n",
+       "  339,\n",
+       "  24552,\n",
+       "  1680,\n",
+       "  334,\n",
+       "  198,\n",
+       "  791,\n",
+       "  6617,\n",
+       "  1847,\n",
+       "  315,\n",
+       "  32515,\n",
+       "  44853,\n",
+       "  304,\n",
+       "  9822,\n",
+       "  304,\n",
+       "  279,\n",
+       "  12877,\n",
+       "  50093,\n",
+       "  13,\n",
+       "  578,\n",
+       "  30758,\n",
+       "  3967,\n",
+       "  2373,\n",
+       "  11,\n",
+       "  2663,\n",
+       "  330,\n",
+       "  30854,\n",
+       "  2249,\n",
+       "  409,\n",
+       "  16056,\n",
+       "  3972,\n",
+       "  1359,\n",
+       "  574,\n",
+       "  6476,\n",
+       "  555,\n",
+       "  66477,\n",
+       "  323,\n",
+       "  13348,\n",
+       "  645,\n",
+       "  304,\n",
+       "  30619,\n",
+       "  19359,\n",
+       "  1903,\n",
+       "  315,\n",
+       "  7732,\n",
+       "  477,\n",
+       "  9998,\n",
+       "  13,\n",
+       "  1115,\n",
+       "  4216,\n",
+       "  1376,\n",
+       "  315,\n",
+       "  32515,\n",
+       "  6532,\n",
+       "  20129,\n",
+       "  264,\n",
+       "  5041,\n",
+       "  449,\n",
+       "  264,\n",
+       "  1450,\n",
+       "  477,\n",
+       "  82612,\n",
+       "  1139,\n",
+       "  264,\n",
+       "  5590,\n",
+       "  18255,\n",
+       "  555,\n",
+       "  264,\n",
+       "  4272,\n",
+       "  382,\n",
+       "  9,\n",
+       "  70766,\n",
+       "  7304,\n",
+       "  24918,\n",
+       "  320,\n",
+       "  845,\n",
+       "  339,\n",
+       "  12,\n",
+       "  1114,\n",
+       "  339,\n",
+       "  24552,\n",
+       "  1680,\n",
+       "  334,\n",
+       "  198,\n",
+       "  2170,\n",
+       "  279,\n",
+       "  55383,\n",
+       "  3952,\n",
+       "  3412,\n",
+       "  11,\n",
+       "  32515,\n",
+       "  6244,\n",
+       "  264,\n",
+       "  5526,\n",
+       "  3347,\n",
+       "  547,\n",
+       "  4315,\n",
+       "  7665,\n",
+       "  64838,\n",
+       "  55206,\n",
+       "  13,\n",
+       "  578,\n",
+       "  1847,\n",
+       "  9041,\n",
+       "  6957,\n",
+       "  4606,\n",
+       "  11,\n",
+       "  323,\n",
+       "  30619,\n",
+       "  19359,\n",
+       "  1051,\n",
+       "  12860,\n",
+       "  449,\n",
+       "  16166,\n",
+       "  6305,\n",
+       "  1903,\n",
+       "  315,\n",
+       "  16763,\n",
+       "  11,\n",
+       "  37148,\n",
+       "  11,\n",
+       "  477,\n",
+       "  9998,\n",
+       "  13,\n",
+       "  578,\n",
+       "  1176,\n",
+       "  5439,\n",
+       "  5718,\n",
+       "  369,\n",
+       "  32515,\n",
+       "  1051,\n",
+       "  3549,\n",
+       "  304,\n",
+       "  9822,\n",
+       "  2391,\n",
+       "  420,\n",
+       "  4261,\n",
+       "  382,\n",
+       "  9,\n",
+       "  9,\n",
+       "  972,\n",
+       "  339,\n",
+       "  9478,\n",
+       "  68063,\n",
+       "  198,\n",
+       "  51,\n",
+       "  16550,\n",
+       "  18661,\n",
+       "  23354,\n",
+       "  304,\n",
+       "  9635,\n",
+       "  2391,\n",
+       "  279,\n",
+       "  220,\n",
+       "  1114,\n",
+       "  410,\n",
+       "  82,\n",
+       "  11,\n",
+       "  8104,\n",
+       "  4315,\n",
+       "  279,\n",
+       "  8582,\n",
+       "  538,\n",
+       "  13,\n",
+       "  578,\n",
+       "  2052,\n",
+       "  9635,\n",
+       "  69492,\n",
+       "  58251,\n",
+       "  323,\n",
+       "  25611,\n",
+       "  24181,\n",
+       "  10349,\n",
+       "  320,\n",
+       "  32,\n",
+       "  2818,\n",
+       "  7905,\n",
+       "  8,\n",
+       "  574,\n",
+       "  18538,\n",
+       "  304,\n",
+       "  220,\n",
+       "  972,\n",
+       "  2614,\n",
+       "  520,\n",
+       "  91257,\n",
+       "  11,\n",
+       "  7295,\n",
+       "  11,\n",
+       "  902,\n",
+       "  1053,\n",
+       "  3010,\n",
+       "  3719,\n",
+       "  832,\n",
+       "  315,\n",
+       "  279,\n",
+       "  1455,\n",
+       "  41385,\n",
+       "  32515,\n",
+       "  40161,\n",
+       "  304,\n",
+       "  279,\n",
+       "  1917,\n",
+       "  382,\n",
+       "  334,\n",
+       "  36931,\n",
+       "  220,\n",
+       "  777,\n",
+       "  339,\n",
+       "  9478,\n",
+       "  68063,\n",
+       "  198,\n",
+       "  791,\n",
+       "  6617,\n",
+       "  5718,\n",
+       "  315,\n",
+       "  32515,\n",
+       "  1051,\n",
+       "  20950,\n",
+       "  1908,\n",
+       "  304,\n",
+       "  220,\n",
+       "  972,\n",
+       "  5958,\n",
+       "  555,\n",
+       "  33305,\n",
+       "  19197,\n",
+       "  19271,\n",
+       "  35622,\n",
+       "  2630,\n",
+       "  11,\n",
+       "  459,\n",
+       "  6498,\n",
+       "  13695,\n",
+       "  9640,\n",
+       "  13,\n",
+       "  578,\n",
+       "  1176,\n",
+       "  4033,\n",
+       "  91257,\n",
+       "  16520,\n",
+       "  3952,\n",
+       "  2035,\n",
+       "  304,\n",
+       "  220,\n",
+       "  972,\n",
+       "  2813,\n",
+       "  11,\n",
+       "  449,\n",
+       "  36221,\n",
+       "  49625,\n",
+       "  11230,\n",
+       "  279,\n",
+       "  3026,\n",
+       "  596,\n",
+       "  17845,\n",
+       "  2316,\n",
+       "  13,\n",
+       "  578,\n",
+       "  7327,\n",
+       "  69492,\n",
+       "  58251,\n",
+       "  28331,\n",
+       "  320,\n",
+       "  1750,\n",
+       "  11042,\n",
+       "  8,\n",
+       "  574,\n",
+       "  9749,\n",
+       "  304,\n",
+       "  220,\n",
+       "  777,\n",
+       "  1187,\n",
+       "  311,\n",
+       "  2633,\n",
+       "  279,\n",
+       "  10775,\n",
+       "  31550,\n",
+       "  382,\n",
+       "  9,\n",
+       "  9,\n",
+       "  508,\n",
+       "  339,\n",
+       "  9478,\n",
+       "  68063,\n",
+       "  198,\n",
+       "  51,\n",
+       "  16550,\n",
+       "  6244,\n",
+       "  264,\n",
+       "  3728,\n",
+       "  25885,\n",
+       "  304,\n",
+       "  279,\n",
+       "  220,\n",
+       "  508,\n",
+       "  339,\n",
+       "  9478,\n",
+       "  11,\n",
+       "  449,\n",
+       "  4311,\n",
+       "  1093,\n",
+       "  8766,\n",
+       "  648,\n",
+       "  20263,\n",
+       "  6342,\n",
+       "  11,\n",
+       "  13611,\n",
+       "  445,\n",
+       "  7403,\n",
+       "  11,\n",
+       "  323,\n",
+       "  8290,\n",
+       "  2259,\n",
+       "  12233,\n",
+       "  18071,\n",
+       "  321,\n",
+       "  12949,\n",
+       "  68366,\n",
+       "  279,\n",
+       "  10775,\n",
+       "  13,\n",
+       "  578,\n",
+       "  5377,\n",
+       "  48688,\n",
+       "  315,\n",
+       "  32515,\n",
+       "  6137,\n",
+       "  304,\n",
+       "  220,\n",
+       "  777,\n",
+       "  2614,\n",
+       "  11,\n",
+       "  994,\n",
+       "  6721,\n",
+       "  4311,\n",
+       "  1051,\n",
+       "  5535,\n",
+       "  311,\n",
+       "  20874,\n",
+       "  304,\n",
+       "  10517,\n",
+       "  74723,\n",
+       "  40161,\n",
+       "  382,\n",
+       "  9,\n",
+       "  9,\n",
+       "  49552,\n",
+       "  11639,\n",
+       "  320,\n",
+       "  1691,\n",
+       "  267,\n",
+       "  9478,\n",
+       "  1680,\n",
+       "  334,\n",
+       "  198,\n",
+       "  51,\n",
+       "  16550,\n",
+       "  9731,\n",
+       "  311,\n",
+       "  38680,\n",
+       "  11,\n",
+       "  449,\n",
+       "  31003,\n",
+       "  304,\n",
+       "  5557,\n",
+       "  11,\n",
+       "  7241,\n",
+       "  11,\n",
+       "  323,\n",
+       "  4967,\n",
+       "  5528,\n",
+       "  13,\n",
+       "  578,\n",
+       "  10775,\n",
+       "  706,\n",
+       "  3719,\n",
+       "  810,\n",
+       "  3728,\n",
+       "  1534,\n",
+       "  11,\n",
+       "  449,\n",
+       "  4311,\n",
+       "  505,\n",
+       "  17226,\n",
+       "  36576,\n",
+       "  27260,\n",
+       "  520,\n",
+       "  279,\n",
+       "  8592,\n",
+       "  2237,\n",
+       "  13,\n",
+       "  11450,\n",
+       "  11,\n",
+       "  32515,\n",
+       "  374,\n",
+       "  6476,\n",
+       "  555,\n",
+       "  11990,\n",
+       "  315,\n",
+       "  1274,\n",
+       "  15603,\n",
+       "  11,\n",
+       "  449,\n",
+       "  6721,\n",
+       "  31261,\n",
+       "  1093,\n",
+       "  279,\n",
+       "  67656,\n",
+       "  323,\n",
+       "  468,\n",
+       "  15559,\n",
+       "  46121,\n",
+       "  51647,\n",
+       "  11191,\n",
+       "  30994,\n",
+       "  627,\n",
+       "  198,\n",
+       "  2028,\n",
+       "  10015,\n",
+       "  3925,\n",
+       "  20025,\n",
+       "  66839,\n",
+       "  279,\n",
+       "  7479,\n",
+       "  315,\n",
+       "  32515,\n",
+       "  596,\n",
+       "  9257,\n",
+       "  28948,\n",
+       "  11,\n",
+       "  719,\n",
+       "  358,\n",
+       "  3987,\n",
+       "  433,\n",
+       "  6835,\n",
+       "  499,\n",
+       "  264,\n",
+       "  5647,\n",
+       "  315,\n",
+       "  279,\n",
+       "  10775,\n",
+       "  596,\n",
+       "  4500,\n",
+       "  927,\n",
+       "  279,\n",
+       "  24552,\n",
+       "  0,\n",
+       "  128009],\n",
+       " 'total_duration': 30056707458,\n",
+       " 'load_duration': 7470958,\n",
+       " 'prompt_eval_duration': 2793715000,\n",
+       " 'eval_count': 470,\n",
+       " 'eval_duration': 27251844000}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import ollama\n",
     "\n",
-    "stream = ollama.chat(\n",
-    "    model='llama3',\n",
-    "    messages=[{'role': 'user', 'content': 'Tell me a brief history of Colombia'}],\n",
-    "    stream=True,\n",
-    ")\n",
+    "result = ollama.generate(model='llama3', prompt='Tell me a brief history of Tennis')\n",
     "\n",
-    "for chunk in stream:\n",
-    "  print(chunk['message']['content'], end='', flush=True)"
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Streaming Ollama Response"
    ]
   },
   {
@@ -51,7 +547,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ollama\n",
+    "\n",
+    "stream = ollama.chat(\n",
+    "    model='llama3',\n",
+    "    messages=[{'role': 'user', 'content': 'Tell me a brief history of Tennis'}],\n",
+    "    stream=True,\n",
+    ")\n",
+    "\n",
+    "for chunk in stream:\n",
+    "  print(chunk['message']['content'], end='', flush=True)"
+   ]
   }
  ],
  "metadata": {
