latest stable release - RAG in Dash

--- a/test_text_extraction.ipynb
+++ b/test_text_extraction.ipynb
@@ -18,23 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = PdfReader(r\"C:\\Users\\Andres\\Desktop\\ScienceRAG\\papers\\Bartholet_et_al.pdf\")"
+    "reader = PdfReader(r\"C:\\Users\\Andres\\Desktop\\ScienceRAG\\papers\\Westgate_et_al.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n"
+      "10\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +198,9 @@
     "  collection = client.create_collection(name=\"docs\")\n",
     "except:\n",
     "  collection = client.get_collection(name=\"docs\")\n",
+    "  client.delete_collection(name=\"docs\")\n",
+    "  collection = client.create_collection(name=\"docs\")\n",
+    "\n",
     "\n",
     "# store each document in a vector embedding database\n",
     "for i, page in enumerate(reader.pages):\n",
@@ -219,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# an example prompt\n",
-    "prompt = \"What are some drawbacks of the combustion of diesel fuels?\"\n",
+    "prompt = \"What are some of the conclusions of this paper?\"\n",
     "\n",
     "# generate an embedding for the prompt and retrieve the most relevant doc\n",
     "response = ollama.embeddings(\n",
@@ -240,20 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the data provided, there are several drawbacks associated with the combustion of diesel fuels:\n",
+      "Some of the conclusions of this paper are:\n",
       "\n",
-      "1. **Flash point concerns**: Shorter POMEs have extremely low flash points, which can present a safety hazard.\n",
-      "2. **Poor water solubility**: Increased molecular weight (backbone length or end-group size) leads to decreased water solubility, making it more difficult to mix with water-based additives or clean up spills.\n",
-      "3. **Solidification at room temperature**: Longer POMEs become solids at room temperature, which can affect their handling and storage.\n",
+      "1. The decay time constants (τ) varied substantially, with τ values being lower in Fall than in Spring. This is attributed mainly to the difference in classroom occupancy between the two semesters.\n",
+      "2. Higher classroom occupancy in the Fall led to higher CO2 levels and temperatures, which triggered ventilation cooling and increased HVAC supply air flowrates.\n",
+      "3. The mechanical HVAC settings, including CO2 demand-control and occupancy mode, had a strong impact on species decay (τ).\n",
+      "4. The τ values of each species varied substantially from day to day, even during occupied mode and around the same time of day.\n",
+      "5. The ACH estimates based on class CO2 decay were similar in Spring to those reported for a mechanically ventilated university classroom by You et al. [13]. However, the Fall ACH estimates observed here were significantly higher (p-value < 0.05).\n",
+      "6. Daily trends did not systematically affect τ, except for the change in HVAC occupancy mode from Unoccupied Mode to Occupied Mode at 6 AM.\n",
       "\n",
-      "These drawbacks highlight the importance of considering the properties of POMEs when designing fuel blends for combustion applications.\n"
+      "Overall, the paper concludes that mechanical HVAC settings and classroom occupancy can have a significant impact on indoor air quality and ventilation rates, which are important factors to consider when designing and operating buildings.\n"
      ]
     }
    ],
